<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".CostsActivity">

    <TextView
        android:id="@+id/tvTripTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Custos - Viagem para a Praia" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvTripTitle" />

    <TextView
        android:id="@+id/tvExtraCostsHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Custos Extras:"
        android:textSize="18sp"
        android:textStyle="italic"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/divider1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnAddExtraCost" />

    <ImageButton
        android:id="@+id/btnAddExtraCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/btn_add_extra_cost"
        app:tint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvExtraCostsHeader"
        app:layout_constraintBottom_toBottomOf="@id/tvExtraCostsHeader" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvExtraCosts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvExtraCostsHeader"
        app:layout_constraintBottom_toTopOf="@id/divider2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_cost" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/tvTotalTripCostLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvTotalTripCostLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_total_trip_cost"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/tvCostPerMemberLabel"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTotalTripCostValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:gravity="end"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/tvTotalTripCostLabel"
        app:layout_constraintBottom_toBottomOf="@id/tvTotalTripCostLabel"
        app:layout_constraintStart_toEndOf="@id/tvTotalTripCostLabel"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="R$ 1500.00" />

    <TextView
        android:id="@+id/tvCostPerMemberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_cost_per_member"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/btnCalculate"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvCostPerMemberValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:gravity="end"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/tvCostPerMemberLabel"
        app:layout_constraintBottom_toBottomOf="@id/tvCostPerMemberLabel"
        app:layout_constraintStart_toEndOf="@id/tvCostPerMemberLabel"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="R$ 375.00" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_calculate"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>